--- a/theory/main.tex
+++ b/theory/main.tex
@@ -45,7 +45,7 @@
 \newcommand{\thetavec}{\boldsymbol{\theta}}
 
 \pagestyle{fancy}
-\fancyhhead{}
+\fancyhead{}
 \lhead{AF-FCL: Mathematical Theory of Improvements}
 \rhead{\thepage}
 
